clusters/dev/minikube/apps/ab/podinfo/deployment-canary.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-canary
  namespace: test
  labels:
    app: podinfo
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podinfo
      version: canary
  template:
    metadata:
      labels:
        app: podinfo
        version: canary
    spec:
      containers:
      - name: podinfod
        image: ghcr.io/stefanprodan/podinfo:6.5.4
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 9898
          protocol: TCP
        command:
        - ./podinfo
        - --port=9898
        - --level=info
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9898
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /readyz
            port: 9898
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 32Mi
