clusters/dev/minikube/apps/ab/podinfo/service-canary.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-canary
  namespace: test
  labels:
    app: podinfo
    version: canary
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: podinfo
    version: canary
